@@ -9,6 +9,9 @@ Features:
     and all bson headers are under bson/. The preferred way of including the
     headers are mongoc/mongoc.h and bson/bson.h respectively.
     Forwarding headers in the root are provided for backwards compatibility.
+  * Additional functions bson_iter_overwrite_date_time, bson_iter_overwrite_oid,
+    and bson_iter_overwrite_timestamp. All fixed-length BSON values can now be
+    updated in place.
 
 Bug fixes:
 
